# egeria-advisor

./: .env.example  .gitignore  .vscodeignore  AIRFLOW_V3_OPENLINEAGE.md  BEEAI_ARCHITECTURE_EVALUATION.md  CONVERSATION_SUMMARY.md  FEEDBACK_SYSTEM_TODO.md  MCP_INTEGRATION_GUIDE.md  MLFLOW_AGENT_TRACKING.md  MULTI_COLLECTION_DESIGN.md  MULTI_COLLECTION_USAGE_GUIDE.md  PHASE10_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE5_LESSONS_LEARNED.md  PHASE7_PROMPT_IMPROVEMENTS.md  PHASE8_TEST_REPORT.md  QUERY_ROUTING_GUIDE.md  QUICK_RESUME.md  QUICK_START.md  RAG_TUNING_GUIDE.md  README.md  SCOPED_QUERIES_IMPLEMENTATION.md  SYSTEM_ARCHITECTURE.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  USER_FEEDBACK_GUIDE.md  VENV_SETUP_GUIDE.md  VSCODE_FILE_WATCHING_FIX.md  activate_venv.sh  automation-capabilities.md  baseline_before.json  check_gpu.py  implementation-roadmap.md  mlflow-experiment-tracking-guide.md  ollama.service.fixed  pyproject.toml  validation_results.json
advisor/: __init__.py  analytics.py  assembly_metrics.py  cli_integration.py  collection_config.py  collection_metrics.py  collection_router.py  config.py  embeddings.py  embeddings_onnx.py  enhanced_analytics.py  enhanced_relationships.py  feedback_collector.py  incremental_indexer.py  ingest_to_milvus.py  interactive_response.py  llm_client.py  mcp_agent.py  mcp_client.py  metadata_filters.py  metrics_collector.py  mlflow_tracking.py  multi_collection_store.py  prompt_templates.py  query_cache.py  query_classifier.py  query_patterns.py  query_processor.py  rag_retrieval.py  rag_system.py  relationships.py  sentiment_analysis.py  tool_augmented_rag.py  vector_store.py
advisor/agents/: __init__.py  backend.py  base.py  beeai_agent.py  cli_command_agent.py  code_example_agent.py  conversation_agent.py  conversation_agent.py.debug_backup  egeria_agent.py  maintenance_agent.py  pyegeria_agent.py  pyegeria_agent.py.debug_backup  query_agent.py  simple_agent.py
advisor/cli/: __init__.py  agent_session.py  formatters.py  interactive.py  main.py
advisor/dashboard/: README.md  __init__.py  streamlit_dashboard.py  terminal_dashboard.py
advisor/data_prep/: __init__.py  cli_indexer.py  cli_parser.py  code_parser.py  doc_parser.py  example_extractor.py  metadata_extractor.py  pipeline.py
advisor/tools/: __init__.py  beeai_tools.py  rag_tool.py  rag_tools.py
airflow/dags/: incremental_update_dag.py
cache/: cli_commands.json  metadata.json  pipeline_summary.json
config/: advisor.yaml  mcp_servers.json.example  routing.yaml
docs/design/: AGENT_ERROR_AND_ROUTING_FIX.md  AIRFLOW_INTEGRATION_DESIGN.md  AMD_OPTIMIZATION.md  CLI_COMMAND_AGENT_DESIGN.md  CODE_ANALYSIS_TOOLS_RESEARCH.md  CODE_ANALYSIS_UPDATE_GUIDE.md  COLLECTION_SPECIFIC_PARAMETERS.md  (+30 more)
examples/: cli_with_feedback.py  cli_with_mcp.py  cli_with_tools_and_rag.py
models/: all-MiniLM-L6-v2.onnx
scripts/: analyze_feedback.py  benchmark_amd.py  benchmark_multi_collection.py  benchmark_onnx.py  capture_baseline_metrics.py  check_collection_manager.py  check_collection_names.py  check_ingestion_progress.sh  check_ingestion_status.py  check_projectmanager.py  clone_repos.py  collect_collection_health.py  convert_to_onnx.py  diagnose_rag_quality.py  diagnose_retrieval.py  enable_enhanced_tracking.py  enable_specialized_collections.py  generate_collection_usage_report.py  generate_directory_stats.py  generate_enhanced_metrics.py  generate_enhanced_relationships.py  generate_report_specs.py  generate_test_metrics.py  ingest_collections.py  ingest_specialized_collections.py  inspect_beeai.py  inspect_chat.py  list_beeai_modules.py  migrate_pyegeria_to_scalar_fields.py  parse_and_index_pyegeria.py  quick_fix_hallucinations.py  recreate_pyegeria_with_scalar_fields.py  recreate_venv.sh  run_dashboard.sh  setup_git_repo.sh  simple_drop_and_reingest_pyegeria.sh  simple_reingest_pyegeria.py  sync_with_github.sh  test_agent.py  test_agents.py  (+47 more)
tests/: conftest.py  test_monitoring.py
(+41 files in other folders)
