[project]
name = "egeria-advisor"
version = "0.1.0"
description = "AI-powered advisor for egeria-python using local LLMs"
requires-python = ">=3.12"
authors = [
    {name = "Dan Wolfson", email = "dan.wolfson@pdr-associates.com"}
]
readme = "README.md"
license = {text = "Apache-2.0"}

dependencies = [
    "pymilvus>=2.4.0",
    "docling>=1.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "mlflow>=2.10.0",
    "ollama>=0.1.0",
    "sentence-transformers>=2.2.0",
    "langchain>=0.1.0",
    "langchain-community>=0.1.0",
    "pyyaml>=6.0.0",
    "loguru>=0.7.0",
    "beeai-framework>=0.0.1",
    "agentstack>=0.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
egeria-advisor = "advisor.cli.advisor_cli:main"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["advisor", "advisor.*"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=advisor --cov-report=html --cov-report=term"
