[project]
name = "egeria-advisor"
version = "0.1.0"
description = "AI-powered advisor for egeria-python using local LLMs"
requires-python = ">=3.12"
authors = [
    {name = "Dan Wolfson", email = "dan.wolfson@pdr-associates.com"}
]
readme = "README.md"
license = {text = "Apache-2.0"}

dependencies = [
    "pymilvus>=2.4.0",
    "docling>=1.0.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.0",
    "pygments>=2.17.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "mlflow>=2.10.0",
    "ollama>=0.1.0",
    "sentence-transformers>=2.2.0",
    "langchain>=0.1.0",
    "langchain-community>=0.1.0",
    "pyyaml>=6.0.0",
    "loguru>=0.7.0",
    "radon>=6.0.1",        # Code metrics (CC, MI, Halstead)
    "pygount>=1.6.1",      # Accurate line counting
    "psutil>=5.9.0",       # System metrics
    "onnx>=1.15.0",        # ONNX model format
    "onnxruntime>=1.16.0", # ONNX inference (CPU)
    "onnxscript>=0.1.0",   # Required for PyTorch to ONNX conversion
    "transformers>=4.30.0", # For tokenizer in ONNX
    "scikit-learn>=1.3.0", # For cosine similarity in benchmarks
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

dashboard = [
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "pandas>=2.1.0",
]

gpu = [
    "onnxruntime-gpu>=1.16.0",  # NVIDIA GPU support
]

onnx-tools = [
    "onnx>=1.15.0",
    "onnxruntime-tools>=1.7.0",  # Model optimization tools
]

[project.scripts]
egeria-advisor = "advisor.cli.main:cli"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["advisor", "advisor.*"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=advisor --cov-report=html --cov-report=term"
